--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,20 +1,17 @@
-// $navbar-default-bg: #312312;
-// $light-orange: #ff8c00;
-// $navbar-default-color: $light-orange;
-
-@import "font-awesome-sprockets";
-@import "font-awesome";
 @import "bootstrap";
-@import "jumpstart/sticky-footer";
-@import "jumpstart/announcements";
+@import "sticky-footer";
+@import "announcements";
 
 // Fixes bootstrap nav-brand container overlap
 @include media-breakpoint-down(xs) {
   .container {
+    margin-top: 25px;
+    margin-bottom: 25px;
     margin-left: 0;
     margin-right: 0;
   }
 }
+
 
 // Masquerade alert shouldn't have a bottom margin
 body > .alert {
