--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,7 +9,7 @@
   <div class="container">
     <%= link_to Rails.configuration.application_name, root_path, class: "navbar-brand" %>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -28,17 +28,18 @@
          </li>
 
           <li class="nav-item dropdown">
-            <%= link_to "#", id: "navbar-dropdown", class: "nav-link dropdown-toggle", data: { target: "nav-account-dropdown", toggle: "dropdown" }, aria: { haspopup: true, expanded: false } do %>
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               <%= image_tag avatar_path(current_user, size: 40), height: 20, width: 20, class: "rounded" %>
-            <% end %>
-            <div id="nav-account-dropdown" class="dropdown-menu dropdown-menu-right" aria-labelledby="navbar-dropdown">
-              <% if current_user.admin? && respond_to?(:admin_root_path) %>
-                <%= link_to "Admin Area", admin_root_path, class: "dropdown-item" %>
-              <% end %>
-              <%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %>
-              <div class="dropdown-divider"></div>
-              <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><% if current_user.admin? && respond_to?(:admin_root_path) %>
+                    <%= link_to "Admin Area", admin_root_path, class: "dropdown-item" %>
+                  <% end %>
+              </li>
+              <li><%= link_to "Settings", edit_user_registration_path, class: "dropdown-item" %></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><%= link_to "Logout", destroy_user_session_path, method: :delete, class: "dropdown-item" %></li>
+            </ul>
           </li>
 
         <% else %>
